--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -17,7 +17,7 @@
      align-items:stretch;
 
       &-item{
-        margin-bottom: 3px;
+        margin-bottom: 30px;
         max-width:30rem;
         min-width: 30rem;
         background-color:#191919;
